--- a/requirements.txt
+++ b/requirements.txt
@@ -153,7 +153,7 @@ pytest-django==4.5.2
 python-dateutil==2.8.2
 python-decouple==3.7
 python-json-logger==2.0.7
-# python==3.10.11
+python==3.10.11
 pytz==2022.7.1
 pywin32==306
 pywinpty==2.0.12
