--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,194 @@ flask_jwt_extended
 python
 flask
 gunicorn
+altair 
+anyio 
+argon2-cffi 
+argon2-cffi-bindings 
+arrow
+asgiref 
+asttokens
+async-lru 
+attrs 
+autopep8 
+Babel 
+backcall 
+beautifulsoup4 
+black 
+bleach 
+blinker 
+build 
+cachetools 
+catboost 
+certifi
+cffi
+charset-normalizer
+click 
+cloudinary 
+cloudpickle 
+colorama 
+comm 
+contourpy 
+coreapi 
+coreschema
+cycler 
+debugpy 
+decorator 
+defusedxml 
+distlib
+Flask
+fonttools
+fqdn
+future
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2 
+googleapis-common-protos
+graphviz 
+gunicorn 
+httplib2 
+hyperopt 
+idna 
+importlib-metadata 
+inflection 
+iniconfig 
+ipykernel 
+ipython 
+ipywidgets 
+isoduration 
+itsdangerous 
+itypes
+jedi
+Jinja2 
+Joblib 
+json5 
+jsonpointer 
+jsonschema 
+jsonschema-specifications 
+jupyter 
+jupyter-console 
+jupyter-events 
+jupyter-lsp 
+jupyter_client 
+jupyter_core 
+jupyter_server 
+jupyter_server_terminals 
+jupyterlab 
+jupyterlab-pygments 
+jupyterlab-widgets 
+jupyterlab_server 
+kiwisolver 
+markdown-it-py 
+MarkupSafe 
+Matplotlib 
+matplotlib-inline 
+mdurl 
+mistune 
+mypy-extensions 
+mysqlclient 
+nbclient 
+nbconvert 
+nbformat 
+nest-asyncio 
+network 
+nodeenv 
+notebook 
+notebook_shim 
+numpy 
+openpyxl 
+overrides 
+packaging 
+pandas 
+pandocfilters 
+parso 
+pathspec 
+pickleshare 
+Pillow 
+pip-tools 
+pipreqs 
+platformdirs 
+plotly
+pluggy 
+prometheus-client 
+prompt-toolkit 
+protobuf 
+psutil 
+psycopg2 
+pure-eval 
+py4j 
+pyarrow 
+pyasn1 
+pyasn1-modules 
+pycodestyle 
+pycparser 
+pydeck 
+pygal 
+pygame 
+Pygments 
+PyJWT 
+Pyparsing 
+pyproject_hooks 
+pyright 
+pyrsistent 
+pytest 
+pytest-django
+python-dateutil
+python-decouple
+python
+python-json-logger 
+pytz 
+pywin32
+pywinpty
+PyYAML
+pyzmq
+referencing 
+requests 
+rfc3339-validator 
+rfc3986-validator 
+rich
+rpds-py 
+rsa 
+ruamel.yaml 
+ruamel.yaml.clib 
+scikit-learn 
+scipy 
+seaborn 
+Send2Trash 
+Six 
+Smmap 
+Sniffio 
+Soupsieve 
+Sqlparse 
+stack-data 
+streamlit 
+streamlit-option-menu 
+tenacity 
+terminado 
+threadpoolctl 
+tinycss2
+toml
+tomli
+toolz 
+tornado 
+tqdm 
+traitlets 
+types-python-dateutil 
+typing_extensions 
+tzdata 
+uri-template 
+uritemplate 
+urllib3 
+virtualenv 
+watchdog 
+wcwidth
+webcolors 
+webencodings 
+websocket-client 
+Werkzeug 
+whitenoise
+widgetsnbextension
+yarg
+zipp
